Add /lab/location
